# Downloader

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CMakeSettings.json.vs2019.txt  CMakeSettings.json.vs2022.txt  README.MD  configure-dyn.sh  configure-sta.sh
.github/workflows/: cmake.yml
Configurables/: versions.h.in
Downloader/: CMakeLists.txt
Downloader/include/: EZResume.h
Downloader/src/: EZResume.cpp  common.h  curldownloader.cpp  curldownloader.h  singleclient.cpp  singleclient.h
DownloaderDemo/: CMakeLists.txt
DownloaderDemo/src/: main.cpp
DownloaderTest/: CMakeLists.txt
DownloaderTest/src/: main.cpp
Examples/Simple/: CMakeLists.txt
Examples/Simple/src/: main.cpp
cmake_modules/: Helpers.cmake
